test-suite/tests/roundtrip/invalid/semantic/args_issue/03/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/args_issue/03/input.essence:2:20:
  |
2 | such that b = party(5)
  |                    ^^^
Insufficient args, expected 2 got 1

